src/objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>zqu__DeltaDiscountTCB__c</fullName>
        <description>Delta Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCV__c</fullName>
        <description>Delta Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>Changed MRR for this quote</description>
        <inlineHelpText>Changed MRR for this quote</inlineHelpText>
        <label>DeltaMRR (Deprecated)</label>
        <summarizedField>zqu__QuoteAmendment__c.zqu__DeltaMRR__c</summarizedField>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBTax__c</fullName>
        <description>Tax on Delta TCB returned from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta TCB returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Changed TCV for this quote</description>
        <inlineHelpText>Changed TCV for this quote</inlineHelpText>
        <label>DeltaTCV (Deprecated)</label>
        <summarizedField>zqu__QuoteAmendment__c.zqu__DeltaTCV__c</summarizedField>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>A description of the amendment.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountMRR__c</fullName>
        <description>The Discount CMRR value returned by previewing the Quote in Zuora</description>
        <inlineHelpText>The Discount CMRR value returned by previewing the Quote in Zuora</inlineHelpText>
        <label>Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCBTax__c</fullName>
        <description>Tax on Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCB__c</fullName>
        <description>Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCV__c</fullName>
        <description>Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ElectronicPaymentMethodId__c</fullName>
        <description>This is the Zuora payment method id created by the HPM.</description>
        <inlineHelpText>This is the Zuora payment method id created by the HPM.</inlineHelpText>
        <label>Electronic Payment Method Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ExistSubscriptionID__c</fullName>
        <label>Exist Subscription ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ExistingProductsStored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag determines whether the existing products are stored successfully</description>
        <inlineHelpText>The flag determines whether the existing products are stored successfully</inlineHelpText>
        <label>Existing Products Stored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__GenerateInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to control whether the invoice will be generated with current quote when the quote is sent to Zuora.</description>
        <inlineHelpText>The flag to control whether the invoice will be generated with current quote when the quote is sent to Z-Billing</inlineHelpText>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Hidden_Subscription_Name__c</fullName>
        <label>Hidden Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InitialTermPeriodType__c</fullName>
        <description>The period type for the first subscription term.</description>
        <inlineHelpText>The option to determine which period type to use for the subscription term.</inlineHelpText>
        <label>Initial Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__InitialTerm__c</fullName>
        <description>The Initial Term of the Quote.</description>
        <inlineHelpText>The Initial Term of the Quote.</inlineHelpText>
        <label>Initial Term</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceID__c</fullName>
        <description>The system-generated Zuora invoice ID associated with the subscription that is just created by the current quote.</description>
        <inlineHelpText>The system-generated Zuora invoice ID associated with the subscription that is just created by the current quote.</inlineHelpText>
        <label>Zuora Invoice ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceOwnerId__c</fullName>
        <description>Invoice Owner Id comes from Z360 Package Billing Account&apos;</description>
        <label>Invoice Owner Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceOwnerName__c</fullName>
        <label>Invoice Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceProcessingOption__c</fullName>
        <description>The option to determine which level the invoice will be generated when the quote is sent to Zuora.</description>
        <inlineHelpText>The option to determine which level the invoice will be generated when the quote is sent to Z-Billing.</inlineHelpText>
        <label>Invoice Processing Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                    <default>true</default>
                    <label>Subscription</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__InvoiceSeparately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the subscription is invoiced separately. If TRUE, then all charges for this subscription are collected into the subscription&apos;s own invoice.</description>
        <inlineHelpText>Determines if the subscription is invoiced separately. If TRUE, then all charges for this subscription are collected into the subscription&apos;s own invoice.</inlineHelpText>
        <label>Invoice Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceTargetDate__c</fullName>
        <label>Invoice Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__InvoiceTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Template</label>
        <referenceTo>zqu__InvoiceTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Charge_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to indicate whether the Quote Metrics need to be recalculated.</description>
        <inlineHelpText>The flag to indicate whether the Quote Metrics need to be recalculated.</inlineHelpText>
        <label>Is Charge Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Parent_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked upon creation of the quote record if the quote is the Parent of one or more Sub Quotes.</description>
        <inlineHelpText>This box will be checked upon creation of the quote record if the quote is the Parent of one or more Sub Quotes.</inlineHelpText>
        <label>Is Parent Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Issuing_Jurisdiction__c</fullName>
        <label>Issuing Jurisdiction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <label>MRR (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__MRRForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__Number__c</fullName>
        <description>The Quote Number.</description>
        <displayFormat>Q{000000}</displayFormat>
        <inlineHelpText>The Quote Number.</inlineHelpText>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>zqu__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity associated with this Quote.</description>
        <inlineHelpText>The Opportunity associated with this Quote.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ParentQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field for the Sub-Quote to look up for it&apos;s parent Quote,  the Primary Quote.</description>
        <inlineHelpText>This is a lookup field for the Sub-Quote to look up for it&apos;s parent Quote,  the Primary Quote.</inlineHelpText>
        <label>Parent Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>SubQuotes</relationshipLabel>
        <relationshipName>SubQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__PaymentGateway__c</fullName>
        <description>This field is used to set the Gateway on New Billing Accounts in Zuora for New Subscription Quotes only.</description>
        <inlineHelpText>This field is used to set the Gateway on New Billing Accounts in Zuora for New Subscription Quotes only. Values in this picklist must correspond to values in Zuora.</inlineHelpText>
        <label>Payment Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Default Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PaymentMethod__c</fullName>
        <description>The Payment Method for the Quote.</description>
        <inlineHelpText>The Payment Method for the Quote.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PaymentTerm__c</fullName>
        <description>The Payment Term.</description>
        <inlineHelpText>The Payment Term.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                    <default>true</default>
                    <label>Due Upon Receipt</label>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_MRR__c</fullName>
        <description>The Contracted Delta MRR returned by previewing the quote in Zuora</description>
        <inlineHelpText>Delta MRR which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_TCB__c</fullName>
        <description>Delta TCB returned from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta TCB returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Delta_TCV__c</fullName>
        <description>Delta TCV which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Discount__c</fullName>
        <description>Discount which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Discount which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_MRR__c</fullName>
        <description>The Contracted MRR returned by previewing the quote in Zuora</description>
        <inlineHelpText>MRR value which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_SubTotal__c</fullName>
        <description>Sub-total which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Sub-total which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_TCB__c</fullName>
        <description>Total Contracted Billing returned from previewing the quote in Zuora</description>
        <inlineHelpText>Total Contracted Billing returned from previewing the quote in Zuora</inlineHelpText>
        <label>TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_TCV__c</fullName>
        <description>TCV value which is got by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Tax__c</fullName>
        <description>Tax which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Tax which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Total__c</fullName>
        <description>Total which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Total which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a Primary Quote attached to an Opportunity.</description>
        <inlineHelpText>Identifies a Primary Quote attached to an Opportunity.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProcessPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to control whether the payment will be processed with current quote when the quote is sent to Zuora.</description>
        <inlineHelpText>The flag to control whether the payment will be processed with current quote when the quote is sent to Z-Billing.</inlineHelpText>
        <label>Process Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProductSelectorVersion__c</fullName>
        <formula>TEXT(zqu__ZuoraConfig__r.zqu__ProductSelectorVersion__c)</formula>
        <label>ProductSelector Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteBusinessType__c</fullName>
        <description>Quote Business Type.</description>
        <inlineHelpText>Quote Business Type.</inlineHelpText>
        <label>Quote Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Downsell</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote template that is used to generate the Quote PDF or Word document.</description>
        <inlineHelpText>The Quote template that will be used to generate the Quote PDF or Word document.  If not selected, the user will select a quote template from a list of available quote templates when creating Quote PDF or Word document.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>zqu__Quote_Template__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RampFrequency__c</fullName>
        <description>Specifies how often products added to the Quote should be ramped.</description>
        <inlineHelpText>Specifies how often products added to the Quote should be ramped.</inlineHelpText>
        <label>Ramp Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Specific Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__RecordReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is allowed to edit the Quote record according to Zuora Config</description>
        <inlineHelpText>If it is allowed to edit the Quote record according to Zuora Config</inlineHelpText>
        <label>RecordReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalSetting__c</fullName>
        <description>Specifies whether a termed subscription will remain termed or change to evergreen when it is renewed.</description>
        <inlineHelpText>Specifies whether a termed subscription will remain termed or change to evergreen when it is renewed.</inlineHelpText>
        <label>Renewal Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalTermPeriodType__c</fullName>
        <description>The period type for the subscription renewal term.</description>
        <inlineHelpText>The option to determine which period type to use for the subscription renewal term.</inlineHelpText>
        <label>Renewal Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__RenewalTerm__c</fullName>
        <description>The Renewal Term of the Quote.</description>
        <inlineHelpText>The Renewal Term of the Quote.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Service_Activation_Date__c</fullName>
        <inlineHelpText>Service Activation Date should be on or after Start Date and cannot be after Customer Acceptance Date.
If Service Activation Date is not required in Zuora, the Start Date will be used as the Service Activation Date.</inlineHelpText>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SoldToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is sold to for this Quote.</description>
        <inlineHelpText>The Contact that is sold to for this Quote.</inlineHelpText>
        <label>Sold to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Ship to Contact)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificRampFrequency__c</fullName>
        <description>Customizes how often products on the Quote should be ramped. This field is required if you set Ramp Frequency to &apos;Specific Months&apos;</description>
        <inlineHelpText>Customizes how often products on the Quote should be ramped. This field is required if you set Ramp Frequency to &apos;Specific Months&apos;</inlineHelpText>
        <label>Specific Ramp Frequency</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__StartDate__c</fullName>
        <description>The Date that the Quote Starts.</description>
        <inlineHelpText>The Date that the subscription and billing starts</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The Status of the Quote.</description>
        <inlineHelpText>The Status of the Quote.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent to Z-Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__StoreProductsJobId__c</fullName>
        <description>The job id for storing original products for Amendment and Renewal.</description>
        <label>Store Products Job Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionName__c</fullName>
        <description>The name of the subscription.</description>
        <label>Subscription Name (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermEndDate__c</fullName>
        <description>Only for Amendment quotes, contains the term end date of the base subscription</description>
        <inlineHelpText>The term end date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermStartDate__c</fullName>
        <description>The term start date of the subscription is amendment on, only used for amendment Quote</description>
        <inlineHelpText>The term start date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionType__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Amend Subscription</fullName>
                </value>
                <value>
                    <fullName>Renew Subscription</fullName>
                </value>
                <value>
                    <fullName>Cancel Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionVersion__c</fullName>
        <description>This is the version of the subscription</description>
        <label>Subscription Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Name__c</fullName>
        <formula>IF( zqu__Hidden_Subscription_Name__c != &apos;&apos;,  zqu__Hidden_Subscription_Name__c ,  zqu__SubscriptionName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Term_Type__c</fullName>
        <inlineHelpText>Subscription Term Type determines whether its Termed or Evergreen. If Evergreen is chosen, then Initial Term and Renewal Term will be set to 0 and Auto Renew will be unchecked. Also, blank value means Quote is created with Termed Subscription Type.</inlineHelpText>
        <label>Subscription Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__TCBTax__c</fullName>
        <description>Tax on Total Contracted Billing returned from previewing the quote in Zuora</description>
        <inlineHelpText>Tax on Total Contracted Billing returned from previewing the quote in Zuora</inlineHelpText>
        <label>TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <label>TCV (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__TCVForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptEffectiveDate__c</fullName>
        <label>Tax Exempt Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptExpirationDate__c</fullName>
        <label>Tax Exempt Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Tax__c</fullName>
        <description>The amount of Tax for the Quote.</description>
        <inlineHelpText>The amount of Tax for the Quote.</inlineHelpText>
        <label>Tax(Deprecated)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Terms__c</fullName>
        <description>Special Terms and Notes for the Quote.</description>
        <inlineHelpText>Special Terms and Notes for the Quote.</inlineHelpText>
        <label>Special Terms and Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total(Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__Total__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ValidUntil__c</fullName>
        <description>The Date that the Quote is Valid until.</description>
        <inlineHelpText>The Date that the Quote is Valid until.</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraAccountID__c</fullName>
        <label>Zuora Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraEntityId__c</fullName>
        <label>Zuora Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraInvoiceNumber__c</fullName>
        <label>Zuora Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>